# dfxvm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  conventional-commits.yml  deny.yml  fmt.yml  lint.yml  prepare-release.yml  release.yml  test.yml
docs/: settings-json-schema.json
docs/cli-reference/: index.md  index.mdz
docs/cli-reference/dfx/: dfx.md  dfx.mdx
docs/cli-reference/dfxvm/: dfxvm-default.md  dfxvm-default.mdx  dfxvm-install.md  dfxvm-install.mdx  dfxvm-list.md  dfxvm-list.mdx  dfxvm-self-uninstall.md  dfxvm-self-uninstall.mdx  dfxvm-self-update.md  dfxvm-self-update.mdx  dfxvm-uninstall.md  dfxvm-uninstall.mdx  dfxvm-update.md  dfxvm-update.mdx  dfxvm.md  dfxvm.mdx
docs/cli-reference/dfxvm-init/: dfxvm-init.md  dfxvm-init.mdx
src/: cli.rs  dfx.rs  dfxvm.rs  dfxvm_init.rs  dist_manifest.rs  download.rs  env.rs  error.rs  errors.rs  fs.rs  installation.rs  json.rs  locations.rs  log.rs  main.rs  settings.rs  style.rs
src/dfxvm/: cli.rs  default.rs  install.rs  list.rs  manifest.rs  self_uninstall.rs  self_update.rs  uninstall.rs  update.rs
src/dfxvm_init/: cli.rs  initialize.rs  plan.rs  ui.rs
src/dfxvm_init/ui/: confirm.rs  customize.rs  deletion_strategy.rs  display.rs
src/error/: cli.rs  dfx.rs  dfxvm.rs  dfxvm_init.rs  download.rs  env.rs  fs.rs  installation.rs  json.rs  reqwest.rs  settings.rs
src/error/dfxvm/: default.rs  install.rs  self_uninstall.rs  self_update.rs  update.rs
src/errors/: cli.rs
src/installation/: bin.rs  dirs.rs  env.rs  env.sh  profile.rs  shell.rs
src/installation/env/: linux-home.sh  linux-xdg-data-home.sh  macos.sh
tests/: dfxvm.rs  dispatch.rs
tests/common/: mod.rs
tests/suite/: dfx.rs  dfxvm.rs  dfxvm_init.rs  dispatch.rs  main.rs
tests/suite/common/: executable.rs  file_contents.rs  mod.rs  paths.rs  project_dirs.rs  release_asset.rs  release_server.rs  settings.rs  target.rs  temp_home_dir.rs
tests/suite/dfxvm/: default.rs  install.rs  list.rs  self_uninstall.rs  self_update.rs  uninstall.rs  update.rs  version.rs
