[package]
name = "dfxvm"
version = "0.1.1"
edition = "2021"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "dfx version manager"
repository = "https://github.com/dfinity/dfxvm"
license = "Apache-2.0"
publish = false # don't publish to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = [ "futures", "tokio" ] }
clap = { version = "4.4", features = [ "cargo", "derive" ] }
clap_derive = "4.4"
console = "0.15.7"
dialoguer = { version = "0.11.0", default-features = false }
directories = "5.0"
flate2 = "1.0"
futures-util = "0.3.14"
hex = "0.4.3"
indicatif = "0.15.0"
itertools = "0.11.0"
reqwest = { version = "0.11.22", features = [ "stream" ] }
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.34", features = ["macros"] }
url = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
httptest = "0.15.5"
predicates = "3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# In coordination with "publish = false" at the package level,
# this makes `cargo dist` generate binaries for the GitHub release,
# while preventing `cargo release` from publishing to crates.io.
dist = true
