[package]
name = "dfxvm"
version = "1.0.2"
edition = "2021"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "dfx version manager"
repository = "https://github.com/dfinity/dfxvm"
license = "Apache-2.0"
publish = false # don't publish to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = [ "futures", "tokio" ] }
clap = { version = "4.4", features = [ "cargo", "derive" ] }
clap_derive = "4.4"
console = "0.15.7"
dialoguer = { version = "0.11.0", default-features = false }
directories = "5.0"
flate2 = "1.0"
futures-util = "0.3.14"
hex = "0.4.3"
indicatif = "0.15.0"
itertools = "0.11.0"
reqwest = { version = "0.12.9", default_features = false, features = [ "stream", "rustls-tls" ] }
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10.8"
sysinfo = "0.30.5"
tar = "0.4.40"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.43", features = ["macros"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
httptest = "0.15.5"
predicates = "3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
