[package]
name = "dfxvm"
version = "1.0.2"
edition = "2021"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "dfx version manager"
repository = "https://github.com/dfinity/dfxvm"
license = "Apache-2.0"
publish = false # don't publish to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backon = "1.6.0"
clap = { version = "4.6.0", features = [ "cargo", "derive" ] }
clap_derive = "4.6.0"
console = "0.16.3"
dialoguer = { version = "0.12.0", default-features = false }
directories = "6.0.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
hex = "0.4.3"
indicatif = "0.18.4"
itertools = "0.14.0"
reqwest = { version = "0.13.2", default-features = false, features = [ "stream", "rustls" ] }
semver = { version = "1.0.28", features = [ "serde" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sysinfo = "0.38.4"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.0"
httptest = "0.16.4"
predicates = "3.1.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
